<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/download_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:visibility="visible">

        <TextView
            android:id="@+id/index_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/speed_tv"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="start"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="706dp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/filename_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@+id/index_tv"
            android:layout_toRightOf="@+id/index_tv"
            android:gravity="start"
            android:layout_marginLeft="3dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_toEndOf="@+id/filename_tv"
            android:layout_toRightOf="@+id/filename_tv"
            android:textColor="#000000"
            android:textSize="14sp" />


    </RelativeLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:progressDrawable="@drawable/running_progress_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/start"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pause_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/pause"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/delete"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/up_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/up" />

        <Button
            android:id="@+id/down_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/down" />

        <CheckBox
            android:id="@+id/select_box"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="" />
    </LinearLayout>

</LinearLayout>


